tests/ui/const-generics/generic_const_exprs/issue-102768.stderr
error[E0107]: associated type takes 1 lifetime argument but 0 lifetime arguments were supplied
  --> $DIR/issue-102768.rs:9:30
   |
LL |     fn f2<'a>(arg: Box<dyn X<Y<1> = &'a ()>>) {}
   |                              ^ expected 1 lifetime argument
   |
note: associated type defined here, with 1 lifetime parameter: `'a`
  --> $DIR/issue-102768.rs:5:10
   |
LL |     type Y<'a>;
   |          ^ --
help: add missing lifetime argument
   |
LL |     fn f2<'a>(arg: Box<dyn X<Y<'_, 1> = &'a ()>>) {}
   |                                +++

error[E0107]: associated type takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/issue-102768.rs:9:30
   |
LL |     fn f2<'a>(arg: Box<dyn X<Y<1> = &'a ()>>) {}
   |                              ^--- help: remove these generics
   |                              |
   |                              expected 0 generic arguments
   |
note: associated type defined here, with 0 generic parameters
  --> $DIR/issue-102768.rs:5:10
   |
LL |     type Y<'a>;
   |          ^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0107`.
